// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactRow renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <View>
    <Avatar
      avatarUrl="cone.png"
      dimension={30}
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Contact One
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`NewMessage renders correctly 1`] = `
<KeyboardFriendlyView
  behavior="height"
  keyboardVerticalOffset={64}
>
  <ParticipantInput
    onChangeText={[Function]}
    participants={
      Array [
        Object {
          "id": 10,
        },
        Object {
          "id": 11,
        },
        Object {
          "id": 12,
        },
      ]
    }
    removeParticipant={[Function]}
    text=""
  />
  <SectionList
    contentContainerStyle={
      Object {
        "borderTopColor": "#d7d8d8",
        "borderTopWidth": 0,
        "paddingHorizontal": 12,
      }
    }
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onEndReachedThreshold={0.3}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [
            Object {
              "id": 1,
            },
            Object {
              "id": 2,
            },
            Object {
              "id": 3,
            },
          ],
          "label": "Recent",
          "loading": true,
        },
      ]
    }
    stickySectionHeadersEnabled={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <MessageInput
    disabled={false}
    multiline={true}
    onBlur={[Function]}
    onSubmit={[Function]}
    placeholder="Type your message here"
  />
</KeyboardFriendlyView>
`;

exports[`NewMessage renders correctly 2`] = `
<KeyboardFriendlyView
  behavior="height"
  keyboardVerticalOffset={64}
>
  <ParticipantInput
    onChangeText={[Function]}
    participants={
      Array [
        Object {
          "id": 10,
        },
        Object {
          "id": 11,
        },
        Object {
          "id": 12,
        },
      ]
    }
    removeParticipant={[Function]}
    text="Jon"
  />
  <SectionList
    contentContainerStyle={
      Object {
        "borderTopColor": "#d7d8d8",
        "borderTopWidth": 0,
        "paddingHorizontal": 12,
      }
    }
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onEndReachedThreshold={0.3}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [
            Object {
              "id": 7,
            },
            Object {
              "id": 8,
            },
            Object {
              "id": 9,
            },
          ],
          "loading": true,
        },
      ]
    }
    stickySectionHeadersEnabled={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
  <MessageInput
    disabled={false}
    multiline={true}
    onBlur={[Function]}
    onSubmit={[Function]}
    placeholder="Type your message here"
  />
</KeyboardFriendlyView>
`;

exports[`Participant renders correctly 1`] = `
<View>
  <Avatar
    avatarUrl="pone.png"
    dimension={24}
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Participant One
  </Text>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Icon
      name="Ex"
    />
  </TouchableOpacity>
</View>
`;

exports[`ParticipantInput renders correctly 1`] = `
<View>
  <ScrollView
    contentContainerStyle={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#d7d8d8",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 60,
        "minWidth": 750,
        "paddingHorizontal": 15,
      }
    }
    horizontal={true}
  >
    <Participant
      participant={
        Object {
          "id": 10,
        }
      }
      remove={[Function]}
    />
    <Participant
      participant={
        Object {
          "id": 11,
        }
      }
      remove={[Function]}
    />
    <Participant
      participant={
        Object {
          "id": 12,
        }
      }
      remove={[Function]}
    />
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder=""
      underlineColorAndroid="transparent"
      value="Jon"
    />
  </ScrollView>
</View>
`;
